[workspace]

members = [
    "backend/dx11",
    "backend/dx12",
    "backend/dx12ll",
    "backend/gl",
    "backend/metal",
    "backend/metalll",
    "backend/vulkan",
    "backend/vulkanll",
    "gfx_core/core",
    "gfx_core/examples",
    "gfx_corell",
    "gfx_macros",
    "gfx_render",
    "gfx_render/examples",
    "gfx_support",
    "gfx_support/examples",
    "window/dxgi",
    "window/glfw",
    "window/glutin",
    "window/metal",
    "window/sdl",
    "window/vulkan",
]
