[workspace]

members = [
    "src/backend/dx11",
    "src/backend/dx12",
    "src/backend/dx12ll",
    "src/backend/gl",
    "src/backend/metal",
    "src/backend/metalll",
    "src/backend/vulkan",
    "src/backend/vulkanll",
    "src/core",
    "src/corell",
    "src/corell/examples",
    "src/macros",
    "src/render",
    "src/render/examples",
    "src/support",
    "src/support/examples",
    "src/window/dxgi",
    "src/window/glfw",
    "src/window/glutin",
    "src/window/metal",
    "src/window/sdl",
    "src/window/vulkan",
]
