[package]
name = "gfx-support-examples"
version = "0.7.0"
description = "GFX example application framework"
homepage = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
documentation = "https://docs.rs/gfx_project"
exclude = ["bors.toml", ".travis.yml"]
workspace = "../.."

[features]
default = ["gl"]
mint = ["gfx/mint", "gfx_core/mint"]
metal = ["gfx_device_metal", "gfx_window_metal", "gfx_device_metalll"]
metal_argument_buffer = ["gfx_device_metalll/argument_buffer"]
gl = ["gfx_device_gl", "gfx_window_glutin"]
dx11 = ["gfx_device_dx11", "gfx_window_dxgi"]
dx12 = ["gfx_device_dx12", "gfx_window_dxgi"]
vulkan = ["gfx_device_vulkan", "gfx_device_vulkanll", "gfx_window_vulkan"]
sdl = ["gfx_window_sdl"]
serialize = ["gfx/serialize", "gfx_core/serialize"]
headless = ["gfx_window_glutin/headless"]
unstable = []

[dependencies]
log = "0.3"
env_logger = "0.4"
glutin = "0.9"
winit = "0.7"
gfx_core = { path = "../../gfx_core/core", version = "0.7.1" }
gfx = { path = "../../gfx_render", version = "0.16" }
gfx_macros = { path = "../../gfx_macros", version = "0.2" }
gfx_support = { path = "../../gfx_support", version = "0.7" }

gfx_device_gl = { path = "../../backend/gl", version = "0.14", optional = true }
gfx_window_glutin = { path = "../../window/glutin", version = "0.17", optional = true }

[dependencies.gfx_device_vulkan]
path = "../../backend/vulkan"
version = "0.2"
optional = true

[dependencies.gfx_device_vulkanll]
path = "../../backend/vulkanll"
version = "0.1"
optional = true

[dependencies.gfx_window_vulkan]
path = "../../window/vulkan"
version = "0.3"
optional = true

[dependencies.gfx_device_metal]
path = "../../backend/metal"
version = "0.3"
optional = true

[dependencies.gfx_window_metal]
path = "../../window/metal"
version = "0.4"
optional = true

[dependencies.gfx_device_metalll]
path = "../../backend/metalll"
version = "0.2"
optional = true
#features = ["native_fence"]

[dependencies.gfx_window_sdl]
path = "../../window/sdl"
version = "0.7"
optional = true

[target.'cfg(unix)'.dependencies]
gfx_window_glfw = { path = "../../window/glfw", version = "0.15" }
gfx_window_sdl = { path = "../../window/sdl", version = "0.7" }

[target.'cfg(windows)'.dependencies]
gfx_device_dx11 = { path = "../../backend/dx11", version = "0.6", optional = true }
gfx_device_dx12 = { path = "../../backend/dx12", version = "0.1", optional = true }
gfx_window_dxgi = { path = "../../window/dxgi", version = "0.9", optional = true }

[[example]]
name = "blend"
path = "blend/main.rs"

[[example]]
name = "cube"
path = "cube/main.rs"

[[example]]
name = "deferred"
path = "deferred/main.rs"

[[example]]
name = "flowmap"
path = "flowmap/main.rs"

[[example]]
name = "gamma"
path = "gamma/main.rs"

[[example]]
name = "performance"
path = "performance/main.rs"

[[example]]
name = "shadow"
path = "shadow/main.rs"

[[example]]
name = "skybox"
path = "skybox/main.rs"

[[example]]
name = "terrain"
path = "terrain/main.rs"

[[example]]
name = "terrain_tessellated"
path = "terrain_tessellated/main.rs"

[[example]]
name = "instancing"
path = "instancing/main.rs"

[[example]]
name = "ubo_tilemap"
path = "ubo_tilemap/main.rs"

[[example]]
name = "mipmap"
path = "mipmap/main.rs"

[[example]]
name = "particle"
path = "particle/main.rs"

[[example]]
name = "triangle"
path = "triangle/main.rs"

[dev-dependencies]
cgmath = "0.15"
gfx_gl = "0.3"
rand = "0.3"
genmesh = "0.5"
image = "0.15"
noise = "0.4"
