# Copyright 2017 The Gfx-rs Developers.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "gfx_support"
version = "0.7.0"
description = "GFX support application framework"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "README.md"
documentation = "https://docs.rs/gfx_support"
workspace = "../.."

[lib]
name = "gfx_support"

[features]
default = ["gl"]
gl = ["gfx_device_gl", "gfx_window_glutin"]

[dependencies]
log = "0.3"
env_logger = "0.4"
glutin = "0.9"
winit = "0.7"
gfx_core = { path = "../core", version = "0.7.1" }
gfx = { path = "../render", version = "0.16" }

gfx_device_gl = { path = "../backend/gl", version = "0.14", optional = true }
gfx_window_glutin = { path = "../window/glutin", version = "0.17", optional = true }

[dev-dependencies]
cgmath = "0.15"
gfx_gl = "0.3"
rand = "0.3"
genmesh = "0.5"
noise = "0.4"
image = "0.15"
