[package]
name = "gfx-corell-examples"
version = "0.7.0"
description = "GFX example application framework"
homepage = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
documentation = "https://docs.rs/gfx_project"
exclude = ["bors.toml", ".travis.yml"]
workspace = "../../.."

[features]
headless = ["gfx_window_glutin/headless"]
metal = ["gfx_device_metal", "gfx_window_metal", "gfx_device_metalll"]
metal_argument_buffer = ["gfx_device_metalll/argument_buffer"]
vulkan = ["gfx_device_vulkan", "gfx_device_vulkanll", "gfx_window_vulkan"]

[dependencies]
env_logger = "0.4"
winit = "0.7"
gfx_core = { path = "../../core", version = "0.7.1" }
gfx_corell = { path = "../../corell", version = "0.1" }

gfx_device_gl = { path = "../../backend/gl", version = "0.14", optional = true }
gfx_window_glutin = { path = "../../window/glutin", version = "0.17", optional = true }

[target.'cfg(windows)'.dependencies]
gfx_device_dx12ll = { path = "../../backend/dx12ll", version = "0.1" }

[dependencies.gfx_device_vulkanll]
path = "../../backend/vulkanll"
version = "0.1"
optional = true

[dependencies.gfx_device_metalll]
path = "../../backend/metalll"
version = "0.2"
optional = true
#features = ["native_fence"]

[dependencies.gfx_device_vulkan]
path = "../../backend/vulkan"
version = "0.2"
optional = true

[dependencies.gfx_device_metal]
path = "../../backend/metal"
version = "0.3"
optional = true

[dependencies.gfx_window_metal]
path = "../../window/metal"
version = "0.4"
optional = true

[dependencies.gfx_window_vulkan]
path = "../../window/vulkan"
version = "0.3"
optional = true

[[example]]
name = "trianglell"
path = "trianglell/main.rs"

[dev-dependencies]
image = "0.15"
